--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
     "version": "0.0.1",
     "description": "Communication between HTML/JavaScript and Arduino",
     "dependencies": {
-        "socket.io": "^2.0.4",
+        "express": "latest",
+        "onoff": "^6.0.3",
         "serialport": "^9.0.1",
-        "express": "latest"
+        "socket.io": "^2.0.4"
     }
 }
